
include_directories(
  basic
)

add_subdirectory(NNGreedyResponseGen)
add_subdirectory(RNNGreedyResponseGen)
add_subdirectory(GRNNGreedyResponseGen)
add_subdirectory(NNGreedyStanceResponseGen)
add_subdirectory(RNNGreedyStanceResponseGen)
add_subdirectory(GRNNGreedyStanceResponseGen)
add_subdirectory(NNGreedyEmotResponseGen)
add_subdirectory(RNNGreedyEmotResponseGen)
add_subdirectory(GRNNGreedyEmotResponseGen)



